--- a/Mask_detect_image.ipynb
+++ b/Mask_detect_image.ipynb
@@ -80,13 +80,12 @@
     "        cv2.rectangle(image,(start_x,start_y),(end_x,end_y),color,2)\n",
     "\n",
     "except:\n",
-    "    print(\"erreur\")\n",
     "    pass\n",
     "        \n",
     "cv2.imshow(\"OutPut\",image)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n",
-    "#use this line if you use a loop\n",
+    "#use this line in case of a loop\n",
     "#image = frame.copy()"
    ]
   },
